fix config pour .exe